--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.9.2"
 requests = "^2.31.0"
 pandas = "2.1.4"
+flake8 = "^7.0.0"
+nose = "^1.3.7"
+bandit = "^1.7.6"
+python-dotenv = "^1.0.0"
+nltk = "^3.8.1"
 
 
 [build-system]
